--- a/src/SimpleMapper/SimpleMapperLib/SimpleMapperLib.csproj
+++ b/src/SimpleMapper/SimpleMapperLib/SimpleMapperLib.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\MapperSettingsExtensions.cs" />
     <Compile Include="Mapper\SimpleMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\MapSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Abstractions\" />
